# teambot

./: .env.template  .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json  repo_wiki.md  requirements-dev.txt  requirements.txt
config/: config.json
docs/: README.md  agent-core-algorithm.md  agent-core-migration.md  agent-runtime-architecture.md  architecture-boundaries.md  architecture-worklog.md  code-structure.md  copaw-baseline.md  framework-design.md
docs/modules/: agent-runtime-architecture.md  api-and-debug.md  getting-started.md  (+2 more)
tests/: conftest.py  test_action_policy.py  test_agent_home_prompt.py  test_architecture_boundaries.py  test_cli_modes.py  test_cli_skills_commands.py  test_core_structure.py  test_dynamic_skills.py  test_external_operation_tools.py  test_gateway_ingress.py  test_interface_parity.py  test_langchain_provider_client.py  test_mcp_runtime_bridge.py  test_memory_compaction.py  test_memory_context.py  test_memory_store.py  test_planner_integration.py  test_planner_provider_manager.py  test_plugin_host.py  test_provider_catalog.py  test_provider_manager.py  test_react_agent.py  test_react_loop.py  test_reason_planner.py  test_reason_prompt.py  test_reasoner_skill_context.py  test_routing.py  test_runtime_config.py  test_runtime_events.py  test_runtime_orchestrator.py  test_skill_lifecycle.py  test_skills.py  test_slash_commands.py  test_terminal_io.py  test_todo_document.py  test_todo_service.py  test_tool_profiles_and_namesake.py  test_tool_runtime_builder.py  test_tool_runtime_config.py  test_tui_smoke.py
(+222 files in other folders)
